# dazzo-monitor

./: .gitignore  LICENSE  README.md  battery_usage.ipynb  docker-compose.yml  pyproject.toml
cpp/receiver/: feather.ino  receiver.ino  secrets.example.h
cpp/transmitter/: transmitter.ino
python/receiver/: main.py  serial_to_influx.py
python/transmitter/lib/adafruit_register/: ._register_bit.mpy
receiver/: .env.example  classifier.py  main.py  parser.py  push.py  receiver.ino
server/: main.py
transmitter/: code.py  config.h.example  transmitter.ino
transmitter/lib/adafruit_ble/: ._advertising
